# NETCONF-SDN

./: .gitignore  README.md
compile_yuma123/: Makefile  README.MD  remote_clean_yuma.sh  remote_install_yuma.sh
compile_yuma123/arm/: Dockerfile  README.md
compile_yuma123/nios2/: Dockerfile  README.md
compile_yuma123/only_install_yuma/: Dockerfile  README.md
compile_yuma123/utils_scripts/: remote_install_yuma.sh  ssh_script.sh  sshd_config
compile_yuma123/x86_64/: Dockerfile  README.md
examples_modules/: README.md
examples_modules/alarma-fulgor/: alarma-fulgor.c  alarma-fulgor.yang
examples_modules/cli-mxp/: cli-mxp.c  cli-mxp.h  cli-mxp.yang  docker.c  prueba.c  prueba.h  prueba2.h
examples_modules/cli_mxp/: cli-mxp.c  cli-mxp.h  cli-mxp.yang
examples_modules/modulopersona/: CMakeLists.txt  README.md
examples_modules/modulopersona/src/: test.c
examples_modules/modulopersona/yang/: persona@2018-02-20.yang
examples_modules/utils_scripts/: pruba.sh  remote-install-module.sh  startup-cfg.xml  vivado.jou  vivado_pid20849.str
examples_modules/yuma123/: alarma-fulgor.c  alarma-fulgor.h
informe/: .gitignore  MastersDoctoralThesis.cls  PI_Aguerreberry_Tomattis.tex  PI_Kleiner_Matias.tex  Tesis_Kleiner_Matias.synctex(busy)  Tesis_Kleiner_Matias.tex  example.bib
mxp40G/: .cproject  .project
onos/: dispositivo.json  dispositivo.json.save  dispositivo1.json  dispositivo2.json  dispositivos.json  respaldo
python-app/: README.md  altura.py  application.py  device_append_onos.json  funciones.py  holamundo.json  mypy.py  perfiles  requirements.txt
(+681 files in other folders)
